building out the case study; fixing the white gap

--- a/styles.css
+++ b/styles.css
@@ -32,13 +32,14 @@ h2 {
 
   padding: 10px 0px;
   margin: 0 auto;
-  width: 100%;
+  /* width: 100%; */
   border-top: lightgray 1px dotted;
 }
 
 main {
   margin: auto;
 }
+
 .main-wrapper {
   margin: 0 auto;
   width: 95%;
